tests/machine/x/python/group_by_multi_join.error
run: exit status 1
Traceback (most recent call last):
  File "/workspace/mochi/tests/machine/x/python/group_by_multi_join.py", line 206, in <module>
    grouped = _q0()
              ^^^^^
  File "/workspace/mochi/tests/machine/x/python/group_by_multi_join.py", line 199, in _q0
    _groups = _group_by(_rows, lambda x: x["part"])
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/workspace/mochi/tests/machine/x/python/group_by_multi_join.py", line 67, in _group_by
    key = keyfn(it)
          ^^^^^^^^^
  File "/workspace/mochi/tests/machine/x/python/group_by_multi_join.py", line 199, in <lambda>
    _groups = _group_by(_rows, lambda x: x["part"])
                                         ~^^^^^^^^
TypeError: 'Auto1' object is not subscriptable

